tests/error/01.desc
Runtime error - slice func: invalid left border